--- a/EPC/src/resourses/config.properties
+++ b/EPC/src/resourses/config.properties
@@ -2,7 +2,7 @@ dao.CourseDAO = dao.impl.CourseDAOImpl
 dao.LectorDAO = dao.impl.LectorDAOImpl
 dao.LectionDAO = dao.impl.LectionDAOImpl
 dao.StudentDAO = dao.impl.StudentDAOImpl
-service.CourseDAO = service.impl.ServiceDAOImpl
-service.LectorDAO = service.impl.LectorDAOImpl
-service.LectionDAO = service.impl.LectionDAOImpl
-service.StudentDAO = service.impl.StudentDAOImpl
+Service.CourseService = Service.impl.CourseServiceImpl
+Service.LectorService = Service.impl.LectorServiceImpl
+Service.LectionService = Service.impl.LectionServiceImpl
+Service.StudentService = Service.impl.StudentServiceImpl
