--- a/EPC/bin/resourses/config.properties
+++ b/EPC/bin/resourses/config.properties
@@ -2,7 +2,7 @@ dao.CourseDAO = dao.impl.CourseDAOImpl
 dao.LectorDAO = dao.impl.LectorDAOImpl
 dao.LectionDAO = dao.impl.LectionDAOImpl
 dao.StudentDAO = dao.impl.StudentDAOImpl
-Service.CourseService = Service.impl.CourseServiceImpl
-Service.LectorService = Service.impl.LectorServiceImpl
-Service.LectionService = Service.impl.LectionServiceImpl
-Service.StudentService = Service.impl.StudentServiceImpl
+service.CourseService = service.impl.CourseServiceImpl
+service.LectorService = service.impl.LectorServiceImpl
+service.LectionService = service.impl.LectionServiceImpl
+service.StudentService = service.impl.StudentServiceImpl
